--- a/vignettes/MetaNeighbor.Rmd
+++ b/vignettes/MetaNeighbor.Rmd
@@ -242,6 +242,15 @@ library("MetaNeighbor")
 data(mn_data)
 var_genes = get_variable_genes(mn_data)
 celltype_NV = run_MetaNeighbor_US(var_genes, mn_data)
+cols = rev(colorRampPalette(brewer.pal(11,"RdYlBu"))(100))
+breaks = seq(0, 1, length=101)
+heatmap.2(celltype_NV,
+          trace = "none",
+          density.info = "none",
+          col = cols,
+          breaks = breaks,
+          cexRow = 0.6,
+          cexCol = 0.6)
 get_top_hits(celltype_NV, 
              mn_data,
              threshold=0.9, 
@@ -385,26 +394,22 @@ top_hits = get_top_hits (celltype_NV,
 top_hits
 ```
 
-    ##              Celltype_1           Celltype_2 Mean_AUROC         Match_type
-    ## 1         GSE60361+Int1   GSE71585+Sst_Chodl       0.99 Reciprocal_top_hit
-    ## 2         GSE60361+Int7    GSE71585+Vip_Sncg       0.97 Reciprocal_top_hit
-    ## 3        GSE60361+Int14       GSE71585+Smad3       0.97 Reciprocal_top_hit
-    ## 4         GSE60361+Int5        GSE71585+Sncg       0.96 Reciprocal_top_hit
-    ## 5        GSE60361+Int10   GSE71585+Vip_Parm1       0.95 Reciprocal_top_hit
-    ## 6        GSE71585+Smad3        GSE71585+Igtp       0.95          Above_0.9
-    ## 7         GSE60361+Int2   GSE71585+Sst_Cbln4       0.95 Reciprocal_top_hit
-    ## 8        GSE60361+Int15   GSE71585+Ndnf_Car4       0.94 Reciprocal_top_hit
-    ## 9     GSE71585+Sst_Myh8    GSE71585+Sst_Cdk6       0.93 Reciprocal_top_hit
-    ## 10       GSE60361+Int10  GSE71585+Vip_Mybpc1       0.93          Above_0.9
-    ## 11        GSE71585+Sncg        GSE60361+Int6       0.92          Above_0.9
-    ## 12   GSE71585+Ndnf_Car4       GSE60361+Int16       0.92          Above_0.9
-    ## 13       GSE60361+Int12 GSE71585+Ndnf_Cxcl14       0.91 Reciprocal_top_hit
-    ## 14  GSE71585+Vip_Mybpc1        GSE60361+Int9       0.91          Above_0.9
-    ## 15    GSE71585+Vip_Sncg        GSE60361+Int8       0.91          Above_0.9
-    ## 16   GSE71585+Pvalb_Wt1 GSE71585+Pvalb_Obox3       0.90 Reciprocal_top_hit
-    ## 17    GSE71585+Vip_Chat    GSE71585+Vip_Gpc3       0.90 Reciprocal_top_hit
-    ## 18    GSE71585+Sst_Myh8      GSE71585+Sst_Th       0.90          Above_0.9
-    ## 19 GSE71585+Pvalb_Obox3 GSE71585+Pvalb_Rspo2       0.90          Above_0.9
+    ##    study_id|Celltype_1  study_id|Celltype_2 Mean_AUROC         Match_type
+    ## 1        GSE60361|Int1   GSE71585|Sst_Chodl       0.99 Reciprocal_top_hit
+    ## 2        GSE60361|Int7    GSE71585|Vip_Sncg       0.97 Reciprocal_top_hit
+    ## 3       GSE60361|Int14       GSE71585|Smad3       0.97 Reciprocal_top_hit
+    ## 4        GSE60361|Int5        GSE71585|Sncg       0.96 Reciprocal_top_hit
+    ## 5       GSE60361|Int10   GSE71585|Vip_Parm1       0.95 Reciprocal_top_hit
+    ## 6        GSE60361|Int2   GSE71585|Sst_Cbln4       0.95 Reciprocal_top_hit
+    ## 7       GSE60361|Int15   GSE71585|Ndnf_Car4       0.94 Reciprocal_top_hit
+    ## 8       GSE60361|Int10  GSE71585|Vip_Mybpc1       0.93          Above_0.9
+    ## 9       GSE60361|Int14        GSE71585|Igtp       0.92          Above_0.9
+    ## 10       GSE71585|Sncg        GSE60361|Int6       0.92          Above_0.9
+    ## 11  GSE71585|Ndnf_Car4       GSE60361|Int16       0.92          Above_0.9
+    ## 12      GSE60361|Int12 GSE71585|Ndnf_Cxcl14       0.91 Reciprocal_top_hit
+    ## 13 GSE71585|Vip_Mybpc1        GSE60361|Int9       0.91          Above_0.9
+    ## 14   GSE71585|Vip_Sncg        GSE60361|Int8       0.91          Above_0.9
+    ## 15       GSE60361|Int3 GSE71585|Pvalb_Obox3       0.81 Reciprocal_top_hit
 
 These top hits can then be used for supervised analysis, making putative cell
 type labels for each unique grouping (see Part 1).
